# NetworkChat

./: CMakeLists.txt  README.md
copia/sockest/: a.out  server  server.cpp
copia/src/: a.out  chatgui.cpp  chatgui.h  client  copia.cpp  socketclient.h  socketserver.h
include/: chatgui.h  socketclient.h  socketserver.h
sockest/: client  client.cpp  server  server.cpp
src/: GUI.cpp  GUI.h  a.out  chatgui.cpp  chatgui.h  client  server  socketclient.cpp  socketclient.h  socketserver.cpp  socketserver.h
